--- a/File_types.ipynb
+++ b/File_types.ipynb
@@ -30,7 +30,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "DATA TYPES / FILES - ESTUDOS"
+        "DATA FILES - CSV TO PARQUET"
       ],
       "metadata": {
         "id": "xt9g29SESFpS"
