--- a/File_types.ipynb
+++ b/File_types.ipynb
@@ -30,7 +30,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "DATA FILES - CSV TO PARQUET"
+        "DATA FILES - CSV TO PARQUET - ARQUIVOS DE DADOS - CSV PARA PARQUET"
       ],
       "metadata": {
         "id": "xt9g29SESFpS"
@@ -39,7 +39,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Instalação pyspark\n",
+        "# Instalação pyspark - Pyspark instalation\n",
         "! pip install pyspark"
       ],
       "metadata": {
@@ -51,7 +51,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Importação de bibliotecas\n",
+        "# Importação de bibliotecas - Importing librearies\n",
         "from google.colab import drive\n",
         "import os\n",
         "from pyspark.sql import SparkSession\n",
@@ -66,7 +66,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Montando driver\n",
+        "# Montando driver - Drive mounting\n",
         "drive.mount('/content/drive')"
       ],
       "metadata": {
@@ -78,7 +78,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Diretório apontando para local do arquivo\n",
+        "# Diretório apontando para local do arquivo - Directory pointing to file location\n",
         "dir = '/content/drive/MyDrive/Colab Notebooks/Dados_gov'"
       ],
       "metadata": {
@@ -90,7 +90,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Criando a sessão spark\n",
+        "# Criando a sessão spark - Creating Spark Session\n",
         "spark = SparkSession.builder.appName('Estudo_data_files').getOrCreate()"
       ],
       "metadata": {
@@ -102,7 +102,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Criando o dataframe\n",
+        "# Criando o dataframe - Creating dataframe\n",
         "file_name = '2024_Passagem'\n",
         "df_passagem = spark.read.csv(f'{dir}/{file_name}.csv', header=True,sep=\";\", encoding='ISO-8859-1', inferSchema=True)"
       ],
@@ -115,7 +115,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Tratamento para a padronização do nome de colunas do data frame\n",
+        "# Tratamento para a padronização do nome de colunas do data frame - Treatment for standardizing the name of data frame columns\n",
         "df_passagem_tratado = df_passagem.select([F.col(x).alias(x.replace('-','').replace(' ','_').lower()) for x in df_passagem.columns])"
       ],
       "metadata": {
@@ -127,7 +127,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Tratamento das colunas valor_da_passagem e taxa_de_serviço que estavam com o tipo String e o separador ,\n",
+        "# Tratamento das colunas valor_da_passagem e taxa_de_serviço que estavam com o tipo String e o separador , - Treatment of the passage_value and service_rate columns that had the String type and the separator ,\n",
         "df_passagem_tratado = df_passagem_tratado.withColumn('valor_da_passagem',F.expr(\"cast(replace(valor_da_passagem,',','.') as float)\")) \\\n",
         "                                          .withColumn('taxa_de_serviço',F.expr(\"cast(replace(valor_da_passagem,',','.') as float)\"))"
       ],
@@ -140,7 +140,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Gerando um novo arquivo Parquet a partir do base em CSV\n",
+        "# Gerando um novo arquivo Parquet a partir do base em CSV - Generating a new Parquet file from the CSV base\n",
         "df_passagem_tratado.write.mode('overwrite').parquet(f'{dir}/{file_name}.parquet')"
       ],
       "metadata": {
@@ -152,7 +152,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Coleta de tamanho dos dois arquivos, em CSV e PARQUET, por fim, a apresentação de ambos os tamanhos e a diferença em percentual entre eles\n",
+        "# Coleta de tamanho dos dois arquivos, em CSV e PARQUET, por fim, a apresentação de ambos os tamanhos e a diferença em percentual entre eles - Collection of the size of the two files, in CSV and PARQUET, finally, the presentation of both sizes and the percentage difference between them\n",
         "tamanho_csv = float(os.path.getsize(f\"{dir}/{file_name}.csv\"))\n",
         "tamanho_parquet = float(os.path.getsize(f\"{dir}/{file_name}.parquet\"))\n",
         "diferenca_percentual = round((tamanho_csv - tamanho_parquet) / tamanho_csv * 100, 2)\n",
